--- a/b-index.jade
+++ b/b-index.jade
@@ -16,10 +16,10 @@ html(lang="en")
 						p.section__text Depending on time, budget, scope, and complexity of your projects we provide 3 options to help shape your tech endeavors by providing IT services as well as extending, relocating of dedicated IT resources.
 
 				section.section.section--without-title
-					.services(data-animation="fadeIn")
+					.services
 						ul.services__list
 							li.services__item.services__item--project
-								.services__item-wrapper
+								.services__item-wrapper(data-animation="fadeIn")
 									h3.services__title Project Development
 									span.services__recommend recommended for
 									ul.services__recommends-list
@@ -34,7 +34,7 @@ html(lang="en")
 											span small to middle scale
 									a.services__link.btn(href="#") Get more info
 							li.services__item.services__item--team
-								.services__item-wrapper
+								.services__item-wrapper(data-animation="fadeIn")
 									h3.services__title Staff Augmentation
 									span.services__recommend recommended for
 									ul.services__recommends-list
@@ -46,7 +46,7 @@ html(lang="en")
 											span app development across diverse technology verticals
 									a.services__link.btn(href="#") Get more info
 							li.services__item.services__item--relocation
-								.services__item-wrapper
+								.services__item-wrapper(data-animation="fadeIn")
 									h3.services__title Relocation Specialist
 									span.services__recommend recommended for
 									ul.services__recommends-list
