--- a/services/b-index.jade
+++ b/services/b-index.jade
@@ -18,7 +18,7 @@ html(lang="en")
 				section.section.section--without-padding-top.services-table
 					.services-table__wrapper
 						table
-							tr.services-table__row-headings
+							tr.services-table__row-headings(data-animation="fadeInDown")
 								td We provide:
 								th.services-table__heading.services-table__heading--project Project Development
 								th.services-table__heading.services-table__heading--team Staff Augmentation
@@ -28,78 +28,78 @@ html(lang="en")
 										include ../icons/arrow-go
 									btn.services-table__switch-btn.services-table__switch-btn--next(type="button")
 										include ../icons/arrow-go
-							tr.services-table__row-group
+							tr.services-table__row-group(data-animation="fadeInRight")
 								td People:
-							tr
+							tr(data-animation="fadeInLeft")
 								td Onsite Developer/Team
 								td.services-table__cell-with-point.services-table__cell-with-point--disabled
 								td.services-table__cell-with-point.services-table__cell-with-point--disabled
 								td.services-table__cell-with-point.services-table__cell-with-point--active
-							tr
+							tr(data-animation="fadeInRight")
 								td Workspace/Equipment
 								td.services-table__cell-with-point.services-table__cell-with-point--active
 								td.services-table__cell-with-point.services-table__cell-with-point--active
 								td.services-table__cell-with-point.services-table__cell-with-point--disabled
-							tr
+							tr(data-animation="fadeInLeft")
 								td PM
 								td.services-table__cell-with-point.services-table__cell-with-point--active
 								td On Demand
 								td.services-table__cell-with-point.services-table__cell-with-point--disabled
-							tr
+							tr(data-animation="fadeInRight")
 								td QA
 								td.services-table__cell-with-point.services-table__cell-with-point--active
 								td On Demand
 								td.services-table__cell-with-point.services-table__cell-with-point--disabled
-							tr.services-table__row-group
+							tr.services-table__row-group(data-animation="fadeInLeft")
 								td Facilities:
-							tr
+							tr(data-animation="fadeInRight")
 								td Developer/Team solely engaged with your project
 								td On Demand
 								td.services-table__cell-with-point.services-table__cell-with-point--active
 								td.services-table__cell-with-point.services-table__cell-with-point--active
-							tr.services-table__row-group
+							tr.services-table__row-group(data-animation="fadeInLeft")
 								td Processes:
-							tr
+							tr(data-animation="fadeInRight")
 								td Fast Start of the Project
 								td.services-table__cell-with-point.services-table__cell-with-point--active
 								td.services-table__cell-with-point.services-table__cell-with-point--active
 								td Depends on Visa availability
-							tr
+							tr(data-animation="fadeInLeft")
 								td PM methodology
 								td SCRUM
 								td On Demand
 								td On Demand
-							tr
+							tr(data-animation="fadeInRight")
 								td Instant Feedback
 								td.services-table__cell-with-point.services-table__cell-with-point--active
 								td.services-table__cell-with-point.services-table__cell-with-point--active
 								td Until the final relocation
-							tr
+							tr(data-animation="fadeInLeft")
 								td Candidates Interview
 								td.services-table__cell-with-point.services-table__cell-with-point--active
 								td.services-table__cell-with-point.services-table__cell-with-point--active
 								td.services-table__cell-with-point.services-table__cell-with-point--active
-							tr
+							tr(data-animation="fadeInRight")
 								td Continuous Client Engagement
 								td On Demand
 								td.services-table__cell-with-point.services-table__cell-with-point--active
 								td.services-table__cell-with-point.services-table__cell-with-point--active
-							tr
+							tr(data-animation="fadeInLeft")
 								td Estimates
 								td.services-table__cell-with-point.services-table__cell-with-point--active
 								td.services-table__cell-with-point.services-table__cell-with-point--active
 								td Salary for the Team/Developer
-							tr
+							tr(data-animation="fadeInRight")
 								td After Release Support
 								td.services-table__cell-with-point.services-table__cell-with-point--active
 								td On Demand
 								td.services-table__cell-with-point.services-table__cell-with-point--disabled
-							tr
+							tr(data-animation="fadeInLeft")
 								td Billing
 								td Monthly Payment
 								td Monthly Rates
 								td %
-							tr.services-table__big-row
+							tr.services-table__big-row(data-animation="fadeInRight")
 								td
 								td
 									a.btn(href="/services/outsource/b-index.html") Learn More
@@ -107,7 +107,7 @@ html(lang="en")
 									a.btn(href="/services/outstaff/b-index.html") Learn More
 								td
 									a.btn(href="/services/relocation/b-index.html") Learn More
-							tr.services-table__row-with-btns
+							tr.services-table__row-with-btns(data-animation="fadeInLeft")
 								td
 								td
 									a.services-table__btn(href="/contact-us/b-index.html") Start Now
