--- a/services/outstaff/b-index.jade
+++ b/services/outstaff/b-index.jade
@@ -1,6 +1,6 @@
 doctype html
 html(lang="en")
-	include ../../parts/head
+	include ../../parts/b-head
 	+head("Staff Augmentation | Uneed Web", "Team Extension, Dedicated Team, Outstaffing, Benefits of offshore software development", "How to add staff without bearing the cost and liabilities of additional full time employees? 36% of organizations who outsource effectively are convinced this could be achieved with a staff augmentation model.")
 
 	body
