--- a/services/outsource/b-index.jade
+++ b/services/outsource/b-index.jade
@@ -1,6 +1,6 @@
 doctype html
 html(lang="en")
-	include ../../parts/head
+	include ../../parts/b-head
 	+head("Project Development | Uneed Web", "Front-end development, Back-end development, PHP, SQL, JavaScript, HTML, Responsive Design, CSS, React, Angular, Wordpress", "Looking for greater flexibility and operations scaling? Over 36% of senior managers find project development outsourcing as a way out. With offloading your project to us you will optimize work and save the best in-house staff for more valuable tasks.")
 
 	body
@@ -12,7 +12,7 @@ html(lang="en")
 			main.page-content
 
 				section.section.section--without-padding-bottom
-					.section__wrapper.section__wrapper--margin-left-only
+					.section__wrapper.section__wrapper--margin-left-only(data-animation="fadeIn")
 						.switcher.switcher--left
 							a.switcher__btn.switcher__btn--prev
 								include ../../icons/left-arrow
@@ -22,7 +22,7 @@ html(lang="en")
 							a.switcher__btn.switcher__btn--next(href="/services/outstaff/b-index.html")
 								include ../../icons/left-arrow
 
-						section.section.section--without-padding-top.section--small-padding-bottom.section--slide.section--slide-project
+						section.section.section--without-padding-top.section--small-padding-bottom.section--slide.section--slide-project(data-animation="fadeIn")
 							h2.section__title.section__title--text-left Project Development
 							p.section__text.section__text--text-left.section__text--with-margin-bottom Looking for greater flexibility and operations scaling?<br>Over 36% of senior managers find project development outsourcing as a way out. With offloading your project to us you will optimize work and save the best in-house staff for more valuable tasks.
 							p.section__text.section__text--text-left.section__text--with-margin-bottom The project development outsourcing service is aimed at businesses that have a defined objective for the project, constrained in time or budget and do not consider establishing an on-going software development team.
@@ -31,7 +31,7 @@ html(lang="en")
 							a.section__btn.btn(href="/services/b-index.html") Services comparison
 								include ../../icons/arrow-go
 
-				section.section.section--without-padding-top.section--without-padding-bottom.section--main-color.workflow.workflow--project
+				section.section.section--without-padding-top.section--without-padding-bottom.section--main-color.workflow.workflow--project(data-animation="fadeIn")
 					.workflow__wrapper
 						.workflow__inner.workflow__inner--right
 							h3.workflow__title You do
@@ -54,7 +54,7 @@ html(lang="en")
 								li.workflow__item.workflow__item--color-7.workflow__item--tablet-color-7
 									span In case needed, continuous project support
 
-				section.section
+				section.section(data-animation="fadeIn")
 					.section__wrapper
 						h2.section__title Result
 						p.section__text You get well-qualified team member, clean and robust code and successfully implemented product
