--- a/services/relocation/b-index.jade
+++ b/services/relocation/b-index.jade
@@ -1,6 +1,6 @@
 doctype html
 html(lang="en")
-	include ../../parts/head
+	include ../../parts/b-head
 	+head("Relocation Specialist | Uneed Web", "full-stack, fron-end developer, back-end developer, PHP developer, Java developer, Web Developer, in-house developer", "Wonder how to access strategic talents? 28% of executives are convinced that accessing strategic top talents adds value beyond standard options. Uneed Web provides a cost-benefit service of Relocation Specialist.")
 
 	body
