add animations-group script

--- a/b-index.jade
+++ b/b-index.jade
@@ -67,7 +67,7 @@ html(lang="en")
 						p.section__text With delivering what we are most adept at - Distinctive Web Development - we provide our customers with
 						.main-features
 							.main-features__wrapper
-								ul.main-features__list
+								ul.main-features__list(data-animations-group)
 									li.main-features__item.main-features-item.main-features-item--icon-left
 										span.main-features__item-icon-wrapper(data-animation="zoomIn")
 											include icons/1-quality
@@ -93,7 +93,7 @@ html(lang="en")
 											include icons/6-risk
 										span.main-features-item__descr Competence with fair value
 
-				section.section.section--small-padding-bottom(data-animation="fadeIn")
+				section.section.section--small-padding-bottom(data-animation="fadeIn").animated
 					.section__wrapper
 						h2.section__title Our Expertise
 						p.section__text Our team is comprised of devoted professionals who have expertise in multiple areas. We build web products that work and last, advance your customer journey, target and keep your customers in the loop.
