services-table animated

--- a/parts/b-footer.jade
+++ b/parts/b-footer.jade
@@ -1,5 +1,5 @@
 mixin b-footer(modifier)
-	footer.page-footer(class="page-footer--#{modifier}")
+	footer.page-footer(class="page-footer--#{modifier}" data-animation="fadeInUp")
 		.page-footer__wrapper
 			nav.page-footer__main-nav.main-nav.main-nav--footer
 				.main-nav__list-wrapper
