hp, contact-us animated

--- a/b-index.jade
+++ b/b-index.jade
@@ -18,8 +18,8 @@ html(lang="en")
 				section.section.section--without-title
 					.services
 						ul.services__list
-							li.services__item.services__item--project
-								.services__item-wrapper(data-animation="fadeIn")
+							li.services__item.services__item--project(data-animation="fadeInLeft")
+								.services__item-wrapper
 									h3.services__title Project Development
 									span.services__recommend recommended for
 									ul.services__recommends-list
@@ -33,8 +33,8 @@ html(lang="en")
 											include icons/checkmark
 											span small to middle scale
 									a.services__link.btn(href="#") Get more info
-							li.services__item.services__item--team
-								.services__item-wrapper(data-animation="fadeIn")
+							li.services__item.services__item--team(data-animation="fadeIn")
+								.services__item-wrapper
 									h3.services__title Staff Augmentation
 									span.services__recommend recommended for
 									ul.services__recommends-list
@@ -45,8 +45,8 @@ html(lang="en")
 											include icons/checkmark
 											span app development across diverse technology verticals
 									a.services__link.btn(href="#") Get more info
-							li.services__item.services__item--relocation
-								.services__item-wrapper(data-animation="fadeIn")
+							li.services__item.services__item--relocation(data-animation="fadeInRight")
+								.services__item-wrapper
 									h3.services__title Relocation Specialist
 									span.services__recommend recommended for
 									ul.services__recommends-list
@@ -69,27 +69,27 @@ html(lang="en")
 							.main-features__wrapper
 								ul.main-features__list(data-animations-group)
 									li.main-features__item.main-features-item.main-features-item--icon-left
-										span.main-features__item-icon-wrapper(data-animation="zoomIn")
+										span.main-features-item__icon-wrapper(data-animation="zoomIn")
 											include icons/1-quality
 										span.main-features-item__descr Thorough process-related involvement 
 									li.main-features__item.main-features-item.main-features-item--icon-left
-										span.main-features__item-icon-wrapper(data-animation="zoomIn")
+										span.main-features-item__icon-wrapper(data-animation="zoomIn")
 											include icons/2-english
 										span.main-features-item__descr Specialist with proficient technical and language skills
 									li.main-features__item.main-features-item.main-features-item--icon-left
-										span.main-features__item-icon-wrapper(data-animation="zoomIn")
+										span.main-features-item__icon-wrapper(data-animation="zoomIn")
 											include icons/3-office
 										span.main-features-item__descr Protected intellectual property rights
 									li.main-features__item.main-features-item.main-features-item--icon-left
-										span.main-features__item-icon-wrapper(data-animation="zoomIn")
+										span.main-features-item__icon-wrapper(data-animation="zoomIn")
 											include icons/4-meeting
 										span.main-features-item__descr Personal meetings and direct comunication
 									li.main-features__item.main-features-item.main-features-item--icon-left
-										span.main-features__item-icon-wrapper(data-animation="zoomIn")
+										span.main-features-item__icon-wrapper(data-animation="zoomIn")
 											include icons/5-seniors
 										span.main-features-item__descr Candidates market overview within 24 hours
 									li.main-features-item.main-features-item--icon-left
-										span.main-features__item-icon-wrapper(data-animation="zoomIn")
+										span.main-features-item__icon-wrapper(data-animation="zoomIn")
 											include icons/6-risk
 										span.main-features-item__descr Competence with fair value
 
