--- a/styl/blocks/main-features-item.styl
+++ b/styl/blocks/main-features-item.styl
@@ -23,3 +23,11 @@
 		width 19rem
 		padding 1rem
 		padding-left 0
+		for num in (3 4)
+			&:nth-child({num})
+				.main-features-item__icon-wrapper
+					animation-delay 0.3s
+		for num in (5 6)
+			&:nth-child({num})
+				.main-features-item__icon-wrapper
+					animation-delay 0.6s
