hp animation, page-footer breakpoints fix

--- a/b-index.jade
+++ b/b-index.jade
@@ -93,7 +93,7 @@ html(lang="en")
 											include icons/6-risk
 										span.main-features-item__descr Competence with fair value
 
-				section.section.section--small-padding-bottom(data-animation="fadeIn").animated
+				section.section.section--small-padding-bottom(data-animation="fadeIn")
 					.section__wrapper
 						h2.section__title Our Expertise
 						p.section__text Our team is comprised of devoted professionals who have expertise in multiple areas. We build web products that work and last, advance your customer journey, target and keep your customers in the loop.
