--- a/styl/blocks/page-footer.styl
+++ b/styl/blocks/page-footer.styl
@@ -67,7 +67,7 @@
 // 		width 60%
 // 		margin 0 auto
 		
-@media $desktop-widths
+@media $tablet-landscape-widths
 
 	.page-footer__wrapper
 		display flex
