services pages animated

--- a/services/outsource/b-index.jade
+++ b/services/outsource/b-index.jade
@@ -32,26 +32,26 @@ html(lang="en")
 								include ../../icons/arrow-go
 
 				section.section.section--without-padding-top.section--without-padding-bottom.section--main-color.workflow.workflow--project(data-animation="fadeIn")
-					.workflow__wrapper
+					.workflow__wrapper(data-animations-group)
 						.workflow__inner.workflow__inner--right
 							h3.workflow__title You do
 							ul.workflow__list.workflow__list
-								li.workflow__item.workflow__item--color-1.workflow__item--tablet-color-1.workflow__item--items-opposite-after-2
+								li.workflow__item.workflow__item--color-1.workflow__item--tablet-position-1.workflow__item--items-opposite-after-2(data-animation="fadeIn")
 									span Provide technical requirements
-								li.workflow__item.workflow__item--color-2.workflow__item--tablet-color-4
+								li.workflow__item.workflow__item--color-2.workflow__item--tablet-position-4(data-animation="fadeIn")
 									span Approve estimate and project offer
 						.workflow__inner.workflow__inner--left
 							h3.workflow__title We do
 							ul.workflow__list.workflow__list
-								li.workflow__item.workflow__item--color-3.workflow__item--tablet-color-2.workflow__item--items-opposite-before-1
+								li.workflow__item.workflow__item--color-3.workflow__item--tablet-position-2.workflow__item--items-opposite-before-1(data-animation="fadeIn")
 									span Analyze, gather and offer the project estimate (timeline and budget)
-								li.workflow__item.workflow__item--color-4.workflow__item--tablet-color-3.workflow__item--items-opposite-after-1
+								li.workflow__item.workflow__item--color-4.workflow__item--tablet-position-3.workflow__item--items-opposite-after-1(data-animation="fadeIn")
 									span Submit project offer, pricing and schedule
-								li.workflow__item.workflow__item--color-5.workflow__item--tablet-color-5
+								li.workflow__item.workflow__item--color-5.workflow__item--tablet-position-5(data-animation="fadeIn")
 									span Set up a team and start a project
-								li.workflow__item.workflow__item--color-6.workflow__item--tablet-color-6
+								li.workflow__item.workflow__item--color-6.workflow__item--tablet-position-6(data-animation="fadeIn")
 									span Test and launch of a project
-								li.workflow__item.workflow__item--color-7.workflow__item--tablet-color-7
+								li.workflow__item.workflow__item--color-7.workflow__item--tablet-position-7(data-animation="fadeIn")
 									span In case needed, continuous project support
 
 				section.section(data-animation="fadeIn")
