--- a/services/relocation/b-index.jade
+++ b/services/relocation/b-index.jade
@@ -35,24 +35,24 @@ html(lang="en")
 						.workflow__inner.workflow__inner--right
 							h3.workflow__title You do
 							ul.workflow__list.workflow__list
-								li.workflow__item.workflow__item--color-1.workflow__item--tablet-color-1.workflow__item--items-opposite-after-4
+								li.workflow__item.workflow__item--color-1.workflow__item--tablet-position-1.workflow__item--items-opposite-after-4(data-animation="fadeIn")
 									span Provide technical requirements for candidates
-								li.workflow__item.workflow__item--color-2.workflow__item--tablet-color-6.workflow__item--items-opposite-after-1
+								li.workflow__item.workflow__item--color-2.workflow__item--tablet-position-6.workflow__item--items-opposite-after-1(data-animation="fadeIn")
 									span Evaluate and approve candidates
-								li.workflow__item.workflow__item--color-3.workflow__item--tablet-color-8
+								li.workflow__item.workflow__item--color-3.workflow__item--tablet-position-8(data-animation="fadeIn")
 									span Sign contract with candidates
 						.workflow__inner.workflow__inner--left
 							h3.workflow__title We do
 							ul.workflow__list.workflow__list
-								li.workflow__item.workflow__item--color-4.workflow__item--tablet-color-2.workflow__item--items-opposite-before-1
+								li.workflow__item.workflow__item--color-4.workflow__item--tablet-position-2.workflow__item--items-opposite-before-1(data-animation="fadeIn")
 									span Candidates market overview in 24 hours
-								li.workflow__item.workflow__item--color-5.workflow__item--tablet-color-3
+								li.workflow__item.workflow__item--color-5.workflow__item--tablet-position-3(data-animation="fadeIn")
 									span Conduct recruitment process to check candidates’ personal skills and language proficiency
-								li.workflow__item.workflow__item--color-6.workflow__item--tablet-color-4
+								li.workflow__item.workflow__item--color-6.workflow__item--tablet-position-4(data-animation="fadeIn")
 									span Conduct technical interviews
-								li.workflow__item.workflow__item--color-7.workflow__item--tablet-color-5.workflow__item--items-opposite-after-1
+								li.workflow__item.workflow__item--color-7.workflow__item--tablet-position-5.workflow__item--items-opposite-after-1(data-animation="fadeIn")
 									span Suggest candidates and schedule an interview with your team
-								li.workflow__item.workflow__item--color-8.workflow__item--tablet-color-7.workflow__item--items-opposite-after-1
+								li.workflow__item.workflow__item--color-8.workflow__item--tablet-position-7.workflow__item--items-opposite-after-1(data-animation="fadeIn")
 									span Handle relocation and settlement
 
 				section.section
