--- a/services/outsource/b-index.jade
+++ b/services/outsource/b-index.jade
@@ -12,7 +12,7 @@ html(lang="en")
 			main.page-content
 
 				section.section.section--without-padding-bottom
-					.section__wrapper.section__wrapper--margin-left-only(data-animation="fadeIn")
+					.section__wrapper.section__wrapper--margin-left-only
 						.switcher.switcher--left
 							a.switcher__btn.switcher__btn--prev
 								include ../../icons/left-arrow
