--- a/services/outstaff/b-index.jade
+++ b/services/outstaff/b-index.jade
@@ -22,7 +22,7 @@ html(lang="en")
 							a.switcher__btn.switcher__btn--next(href="/services/relocation/b-index.html")
 								include ../../icons/left-arrow
 
-						section.section.section--without-padding-top.section--small-padding-bottom.section--slide.section--slide-team
+						section.section.section--without-padding-top.section--small-padding-bottom.section--slide.section--slide-team(data-animation="fadeIn")
 							h2.section__title.section__title--text-left Staff Augmentation
 							p.section__text.section__text--text-left.section__text--with-margin-bottom How to add staff without bearing the cost and liabilities of additional full time employees?<br>36% of organizations who outsource effectively are convinced that this could be achieved with a staff augmentation model.
 							p.section__text.section__text--text-left.section__text--with-margin-bottom Uneed Web provides this cost-effective model for businesses that require high-quality, efficient resources within an optimized time frame. You get control over the selection and management of your dedicated IT team with flexible workload and scope.
@@ -31,8 +31,8 @@ html(lang="en")
 							a.section__btn.btn(href="/services/b-index.html") Services comparison
 								include ../../icons/arrow-go
 
-			section.section.section--without-padding-top.section--without-padding-bottom.section--main-color.workflow.workflow--team
-					.workflow__wrapper
+				section.section.section--without-padding-top.section--without-padding-bottom.section--main-color.workflow.workflow--team(data-animation="fadeIn")
+					.workflow__wrapper(data-animations-group)
 						.workflow__inner.workflow__inner--right
 							h3.workflow__title You do
 							ul.workflow__list.workflow__list
