--- a/services/relocation/b-index.jade
+++ b/services/relocation/b-index.jade
@@ -22,7 +22,7 @@ html(lang="en")
 							a.switcher__btn.switcher__btn--next
 								include ../../icons/left-arrow
 
-						section.slider__slide-inner.section.section--without-padding-top.section--small-padding-bottom.section--slide.section--slide-relocation
+						section.slider__slide-inner.section.section--without-padding-top.section--small-padding-bottom.section--slide.section--slide-relocation(data-animation="fadeIn")
 							h2.section__title.section__title--text-left Relocation Specialist
 							p.section__text.section__text--text-left.section__text--with-margin-bottom Wonder how to access strategic talents?<br>28% of executives are convinced that accessing strategic top talents adds value beyond standard options. Uneed Web provides a cost-benefit service of Relocation Specialist. Access a richer pool of IT experts and leverage your human capital.
 							p.section__text.section__text--text-left.section__text--with-margin-bottom When the top talents for your industry are above your budget or simply not located in your area we will provide you with high-skilled candidates that are willing to relocate to your place.
@@ -30,8 +30,8 @@ html(lang="en")
 							a.section__btn.btn(href="/services/b-index.html") Services comparison
 								include ../../icons/arrow-go
 
-				section.section.section--without-padding-top.section--without-padding-bottom.section--main-color.workflow.workflow--relocation
-					.workflow__wrapper
+				section.section.section--without-padding-top.section--without-padding-bottom.section--main-color.workflow.workflow--relocation(data-animation="fadeIn")
+					.workflow__wrapper(data-animations-group)
 						.workflow__inner.workflow__inner--right
 							h3.workflow__title You do
 							ul.workflow__list.workflow__list
