--- a/b-index.jade
+++ b/b-index.jade
@@ -210,4 +210,26 @@ html(lang="en")
 						slideChange(index+1);
 					});
 				});
+
+				window.addEventListener('keydown', function (event) {
+					if (event.keyCode == 37 && slideCurrent > 1) {
+						slideChange(slideCurrent-1);
+					}
+					if (event.keyCode == 39 && slideCurrent < slidesCount) {
+						slideChange(slideCurrent+1);
+					}
+				});
+
+				//- $(document).ready(function () {
+				//- 	$('slider').waypoint(function () {
+				//- 		window.on('keydown', function(event) {
+				//- 			if (event.which == 37) {
+				//- 				slideChange(index-1);
+				//- 				}
+				//- 			if (event.which == 39) {
+				//- 				slideChange(index+1);
+				//- 				}
+				//- 		});
+				//- 	}, {offset: '80%'});
+				//- });
 			})();
