--- a/portfolio/b-index.jade
+++ b/portfolio/b-index.jade
@@ -79,20 +79,4 @@ html(lang="en")
 											include ../icons/arrow-go
 			include ../parts/b-footer
 			+b-footer("portfolio")
-		script.
-			(function() {
-				var navMain = document.querySelector('.main-nav');
-				var navToggle = document.querySelector('.main-nav__toggle');
-
-				navMain.classList.remove('main-nav--nojs');
-
-				navToggle.addEventListener('click', function() {
-					if (navMain.classList.contains('main-nav--closed')) {
-						navMain.classList.remove('main-nav--closed');
-						navMain.classList.add('main-nav--opened');
-					} else {
-						navMain.classList.remove('main-nav--opened');
-						navMain.classList.add('main-nav--closed');
-					}
-				});
-			})();
+		script(src="/js/main-nav.min.js")
