add scroll-btn script

--- a/b-index.jade
+++ b/b-index.jade
@@ -146,6 +146,7 @@ html(lang="en")
 			include parts/b-footer
 			+b-footer("hp")
 		script(src="js/main-nav.min.js")
+		script(src="/js/index.min.js")
 		script.
 
 			(function () {
